# ncnn_retinaface

./: CMakeLists.txt  FaceDetector.cpp  main.cpp
model/: face.param
